translation-tool/inputs/source_meta/objects/YAHS_DeEscalationCode__c.object
<CustomObject>
    <description>Object to determine the De-escalation code</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this record is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>De_Escalation_Code__c</fullName>
        <description>Field to store  De-Escalation Code</description>
        <inlineHelpText>Please enter the de escalation code</inlineHelpText>
        <label>De-Escalation Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_Formula__c</fullName>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(De_escalation_Description_esCO__c ), Description__c ,De_escalation_Description_esCO__c) ,&apos;es_PA&apos;, IF(ISBLANK(De_escalation_Description_esPA__c ), Description__c ,De_escalation_Description_esPA__c) ,&apos;es_PE&apos;, IF(ISBLANK(De_escalation_Description_esPE__c ), Description__c ,De_escalation_Description_esPE__c) ,&apos;es_EC&apos;, IF(ISBLANK(De_escalation_Description_esEC__c ), Description__c ,De_escalation_Description_esEC__c) ,&apos;es_CL&apos;, IF(ISBLANK(De_escalation_Description_esCL__c), Description__c ,De_escalation_Description_esCL__c) ,&apos;es_AR&apos;, IF(ISBLANK(De_escalation_Description_esAR__c), Description__c ,De_escalation_Description_esAR__c) , Description__c)</formula>
        <label>De-escalation Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_Portuguese__c</fullName>
        <label>De-escalation Description (Portuguese)</label>
        <type>TextArea</type>
    </fields>
	 <fields>
        <fullName>De_escalation_Description_esAR__c</fullName>
        <label>De-escalation Description (Argentina)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_esCL__c</fullName>
        <label>De-escalation Description (Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_esCO__c</fullName>
        <label>De-escalation Description (Columbia)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_esEC__c</fullName>
        <label>De-escalation Description (Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_esPA__c</fullName>
        <label>De-escalation Description (Panama)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>De_escalation_Description_esPE__c</fullName>
        <label>De-escalation Description (Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To store the de escalation description</description>
        <inlineHelpText>Please enter the description</inlineHelpText>
        <label>De-Escalation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF(Effective_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;=  Expiry_Date__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>All levels of record type</description>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Support Case</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>De-Escalation Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>De-Escalation Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AnyOneLanguageIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Description__c ),ISBLANK(De_escalation_Description_Portuguese__c))</errorConditionFormula>
        <errorMessage>Description in any one language is required</errorMessage>
    </validationRules>
</CustomObject>